## Process this file with automake to produce Makefile.in

bin_PROGRAMS = RNAhybrid RNAcalibrate RNAeffective

RNAhybrid_SOURCES = \
	rnahybrid.c\
	hybrid_core.c\
	hybrid_core.h\
	energy.c\
	energy.h\
	input.c\
	input.h\
	fasta.c\
	fasta.h\
	globals.h\
	minmax.h\
	plot.c\
	plot.h

RNAcalibrate_SOURCES = \
	rnacalibrate.c\
	hybrid_core.c\
	hybrid_core.h\
	numerical.c\
	numerical.h\
	energy.c\
	energy.h\
	input.c\
	input.h\
	fasta.c\
	fasta.h\
	random.c\
	random.h\
	mt19937-1.c\
	mt19937-1.h\
	globals.h\
	minmax.h\
	plot.c\
	plot.h

RNAeffective_SOURCES = \
	rnaeffective.c\
	hybrid_core.c\
	hybrid_core.h\
	numerical.c\
	numerical.h\
	energy.c\
	energy.h\
	input.c\
	input.h\
	fasta.c\
	fasta.h\
	random.c\
	random.h\
	mt19937-1.c\
	mt19937-1.h\
	globals.h\
	minmax.h\
	plot.c\
	plot.h

INCLUDES = -I${includedir}
